# volcengine-hermes-plugin

./: .gitignore  README.md  README_zh-CN.md  install.sh  pyproject.toml
docs/refactor/: 00-context-and-decisions.md  01-hermes-plugin-architecture.md  02-model-provider-dynamic-models.md  03-image-video-providers.md  04-web-search-provider.md  05-install-config-user-experience.md  06-testing-and-acceptance.md  07-implementation-phases.md  08-detailed-phase-breakdown.md  09-interface-pseudocode-and-config-examples.md  10-implementation-checklists.md  11-development-priority-task-map.md  12-voice-provider-plan.md  13-handoff.md  14-voice-dictation-debug-log.md  README.md
plugins/_volcengine_common/: __init__.py  config.py
plugins/image_gen/volcengine/: __init__.py  plugin.yaml
plugins/image_gen/volces-engine/: __init__.py  plugin.yaml
plugins/model-providers/volcengine/: __init__.py  plugin.yaml
plugins/model-providers/volces-engine/: __init__.py  plugin.yaml
plugins/transcription/volcengine/: __init__.py  plugin.yaml  protocol.py  provider.py
plugins/tts/volcengine/: __init__.py  plugin.yaml  provider.py
plugins/video_gen/volcengine/: __init__.py  plugin.yaml
plugins/video_gen/volces-engine/: __init__.py  plugin.yaml
tests/: conftest.py  test_install_script.py  test_media_provider_contracts.py  test_model_provider_endpoint.py  test_plugin_manifest_ids.py  test_readme_voice_docs.py  test_repository_baseline.py  test_transcription_provider.py  test_tts_provider.py  test_volcengine_config.py  test_web_search_provider.py
(+3 files in other folders)
